--- a/website/src/main/resources/config/application.properties
+++ b/website/src/main/resources/config/application.properties
@@ -4,7 +4,7 @@ server.session.timeout=1800
 server.max-http-header-size=20971520
 
 #datasource
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/learn?autoReconnect=true&useUnicode=true&characterEncoding=utf8&useSSL=true
 #  ?useUnicode=true&amp;characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=inserthome
